--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
         <!-- DEPENDENCIES VERSIONS -->
-        <slf4j.version>1.7.32</slf4j.version>
-        <pi4j.version>2.0</pi4j.version>
+        <slf4j.version>2.0.12</slf4j.version>
+        <pi4j.version>2.5.1</pi4j.version>
 
         <!-- BUILD PLUGIN VERSIONS -->
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -58,7 +58,7 @@
         </dependency>
         <dependency>
             <groupId>com.pi4j</groupId>
-            <artifactId>pi4j-plugin-pigpio</artifactId>
+            <artifactId>pi4j-plugin-gpiod</artifactId>
             <version>${pi4j.version}</version>
         </dependency>
     </dependencies>
